[gd_scene load_steps=5 format=2]

[ext_resource path="res://assests/libraries/Ui/Poke_selector_bg.png" type="Texture" id=1]
[ext_resource path="res://Pokemon/Bulbasaur.png" type="Texture" id=2]
[ext_resource path="res://assests/items/pngwing.com.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Poke_box.gd" type="Script" id=4]

[node name="Poke_box" type="Control"]
margin_top = 62.0
margin_right = 240.0
margin_bottom = 112.0
rect_min_size = Vector2( 240, 50 )
script = ExtResource( 4 )

[node name="Poke_selector" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true

[node name="HBoxContainer" type="HBoxContainer" parent="Poke_selector"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 9.0
margin_right = -4.0
custom_constants/separation = 27

[node name="Poke_ball_1" type="TextureRect" parent="Poke_selector/HBoxContainer"]
margin_right = 16.0
margin_bottom = 41.0
rect_min_size = Vector2( 16, 16 )
texture = ExtResource( 3 )

[node name="Pokemon_sprite" type="Sprite" parent="Poke_selector/HBoxContainer/Poke_ball_1"]
position = Vector2( 5, 27 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 25.6114, 9.60972, 38.2669, 22.8413 )

[node name="Poke_ball_2" type="TextureRect" parent="Poke_selector/HBoxContainer"]
margin_left = 43.0
margin_right = 59.0
margin_bottom = 41.0
rect_min_size = Vector2( 16, 16 )
texture = ExtResource( 3 )

[node name="Pokemon_sprite" type="Sprite" parent="Poke_selector/HBoxContainer/Poke_ball_2"]
position = Vector2( 5, 27 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 25.6114, 9.60972, 38.2669, 22.8413 )

[node name="Poke_ball_3" type="TextureRect" parent="Poke_selector/HBoxContainer"]
margin_left = 86.0
margin_right = 102.0
margin_bottom = 41.0
rect_min_size = Vector2( 16, 16 )
texture = ExtResource( 3 )

[node name="Pokemon_sprite" type="Sprite" parent="Poke_selector/HBoxContainer/Poke_ball_3"]
position = Vector2( 5, 27 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 25.6114, 9.60972, 38.2669, 22.8413 )

[node name="Poke_ball_4" type="TextureRect" parent="Poke_selector/HBoxContainer"]
margin_left = 129.0
margin_right = 145.0
margin_bottom = 41.0
rect_min_size = Vector2( 16, 16 )
texture = ExtResource( 3 )

[node name="Pokemon_sprite" type="Sprite" parent="Poke_selector/HBoxContainer/Poke_ball_4"]
position = Vector2( 5, 27 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 25.6114, 9.60972, 38.2669, 22.8413 )

[node name="Poke_ball_5" type="TextureRect" parent="Poke_selector/HBoxContainer"]
margin_left = 172.0
margin_right = 188.0
margin_bottom = 41.0
rect_min_size = Vector2( 16, 16 )
texture = ExtResource( 3 )

[node name="Pokemon_sprite" type="Sprite" parent="Poke_selector/HBoxContainer/Poke_ball_5"]
position = Vector2( 5, 27 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 25.6114, 9.60972, 38.2669, 22.8413 )

[node name="Poke_ball_6" type="TextureRect" parent="Poke_selector/HBoxContainer"]
margin_left = 215.0
margin_right = 231.0
margin_bottom = 41.0
rect_min_size = Vector2( 16, 16 )
texture = ExtResource( 3 )

[node name="Pokemon_sprite" type="Sprite" parent="Poke_selector/HBoxContainer/Poke_ball_6"]
position = Vector2( 5, 27 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 25.6114, 9.60972, 38.2669, 22.8413 )
